# diakritika

./: .gitignore  Cargo.toml  LICENSE  README.md  bindings.ini  czeck.ini
.github/workflows/: dev.yml  release.yml  rust.yml
src/: hotkeymanager.rs  keybindings.rs  keymanager.rs  main.rs  static.rs  util.rs
src/type/: hook.rs  hotkeymanager.rs  keyboardhook.rs  mod.rs
src/win/: keyboard.rs  keyboard_vk.rs  mod.rs  window.rs
