[package]
name = "ďíáǩříťíǩád"
description = """>I just thought that the fact that word `diakritika`
 does not have any diacriticas in it is a shame.

 diakriticad (pronounced diakritica D) is a simple daemon
  program that allows you to type your favourite european language's modifiers (diacriticas)
  in a way that does not twist your arm and does not take away your @s and #s and $s.

  program is controlled with application configurations written in any config language you like
for example,
ukrainian.ini to use ukrainian symbols with russian keyboard layout:
ы
[є]
ALT+э
ALT+'
[і]
ALT+ы
ALT+s
[ї]
win+ы
alt+ъ
alt+]

and czeck.ini:
[á]
alt+a
[č]
alt+c
[ď]
alt+d
[é]
lalt+e
[ě]
ralt+e
[ň]
win+n
[ó]
alt+o
[ř]
alt+r
[š]
alt+s
[ť]
alt+t
[ú]
lalt+u
[ů]
ralt+u
[ý]
alt+y
[ž]
alt+z

also you can use czech_legacy.ini
which is like default czech legacy but if you are traumatized by czech qwertz/qwerty (with 1,)
 """
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
winapi = { version = "0.3.9", features = ["windef","minwindef","oaidl","wtypesbase","wtypes","winreg","taskschd",
    "errhandlingapi","winuser", "setupapi","cfgmgr32","minwinbase", "processenv", "securitybaseapi",
    "processthreadsapi", "winnt", "handleapi", "impl-default","libloaderapi", "commctrl", "shellapi", "wingdi", "impl-debug", "winbase"]}
anyhow = "1.0.79"
parking_lot = {  version = "0.12", features = [ "send_guard", "arc_lock"] }
once_cell = "1.18.0"
num-traits = { version = "0.2", features = ["default"] }
num-derive = { version = "0.4", features = [] }
derive_more = { version = "1.0.0-beta.6", features = ["debug", "from_str"] }
winreg = "0.52.0"
ini = "1.3.0"