[package]
name = "ďíáǩříťíǩád"
description = "Keybinder to type diacrytical characters without needing to hack the layout itself. Supports bindings to the left Alt + letter"
version = "0.2.1"
edition = "2021"

[profile.release]
strip="debuginfo"

[dependencies]
winapi = { version = "0.3.9", features = ["windef","minwindef","oaidl","wtypesbase","wtypes","winreg","taskschd",
    "errhandlingapi","winuser", "setupapi","cfgmgr32","minwinbase", "processenv", "securitybaseapi",
    "processthreadsapi", "winnt", "handleapi", "impl-default","libloaderapi", "commctrl", "shellapi", "wingdi", "impl-debug", "winbase"]}
anyhow = "1.0.79"
parking_lot = {  version = "0.12", features = [ "send_guard", "arc_lock"] }
once_cell = "1.18.0"
num-traits = { version = "0.2", features = ["default"] }
num-derive = { version = "0.4", features = [] }
derive_more = { version = "1.0.0-beta.6", features = ["debug", "from_str"] }
winreg = "0.52.0"
ini = "1.3.0"
indexmap = "2.2.3"
log = "0.4.20"
simple_logger = "4.3.3"
